--- a/index.css
+++ b/index.css
@@ -7,9 +7,23 @@ body {
     padding: 0;
 }
 
+#cabecera {
+    background: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline {
+    padding-left: 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container {
     width: 70%;
-    padding: 1em;
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
@@ -17,8 +31,10 @@ body {
 
 #container h1 {
     font-size: 20px;
+    padding: 0 1em;
 }
 
-#container h2 {
-    font-size: 18px;
+#container p {
+    font-size: 16px;
+    padding: 0 1em;
 }
